--- a/minimal/Makefile
+++ b/minimal/Makefile
@@ -1,8 +1,9 @@
 # Minimal gcc makefile for LPC810 with serial output and printf
 
-# default Linux USB device name for upload
-#TTY ?= /dev/tty.usbserial-A6026POL
-TTY ?= /dev/tty.usbserial-A50285BI
+# TODO: Change FTDI232 Portname. default Linux USB device name for upload
+#TTY ?= /dev/ttyUSB0
+#TTY ?= /dev/tty.usbserial-A50285BI
+TTY ?= COM5
 
 # use the arm cross compiler, not std gcc
 TRGT = arm-none-eabi-
