--- a/minimal/Makefile
+++ b/minimal/Makefile
@@ -21,10 +21,10 @@ vpath %.c ../minimal
 vpath %.cpp ../minimal
 
 # default target
+#lpc21isp -control -donotstart -bin $< $(TTY) 115200 0
 upload: firmware.bin
-	#lpc21isp -control -donotstart -bin $< $(TTY) 115200 0
+	# Press program button for 2 seconds when synchronizing
 	lpc21isp -control -bin $< $(TTY) 115200 0
-	(lpc21isp -try1 -control -bin $< $(TTY) 115200 0) &> /dev/null
 
 firmware.elf: main.o gcc_startup_lpc8xx.o
 	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $^
