--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,2 @@
-# This makefile reuses the minimal one, but runs it in a sibling directory
+#x This makefile reuses the minimal one, but runs it in a sibling directory
 include ../minimal/Makefile
